search/kibana-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kibana-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kibana
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 5601
